@@ -1,2 +1,3 @@
+EBUILD cl-wireless-meta-11.6-r1.ebuild 1150 RMD160 1019fe5de1e6e0b54adab0eccc312fd06c2319af SHA1 659117ff5540704cfb0fdeb2f90f67e585a63f4d SHA256 95cc954f8856f611b919e37d89443b5606dc1f0c3109bbb626d42109a0c544a7
 EBUILD cl-wireless-meta-11.6.ebuild 924 RMD160 2e85ef1701a0d8940ebd96ce91c7da43ff106c33 SHA1 b8f97814ecdfb5acd7991d78e62a5201d6bdb545 SHA256 1960ddb6a76280cd597a517618786d21120773e7c6639c62bff3b98e2624ff3f
-MISC ChangeLog 2506 RMD160 a3c6a17747928b185ccfeeb4e38e12b8c7ca73c0 SHA1 ef5e8191b3d336c7adb52eb89b22fa5638f4b26f SHA256 1b399541464dfe4ebd285df1302dc958ec8aa75df4b7d2e4ac27002c917b4961
+MISC ChangeLog 2682 RMD160 c71ba0843fb22f90fd685a46fbee33a98b939dfd SHA1 696af2d992a31d088b5cee915aa471f4cf52457c SHA256 645b9815b975730e0d8d3575376b8a24eeb617a4fdf8b3bda91aed83910b95b7
