@@ -32,17 +32,21 @@
 #for calculate-lib
 ~dev-python/py-smbpasswd-1.0.1 amd64
 
-~net-wireless/madwimax-0.1.1 amd64 x86
 ~net-wireless/b43-firmware-4.174.64.19 amd64 x86
 ~net-wireless/b43-fwcutter-013 amd64 x86
+~net-wireless/bluez-firmware-1.2 amd64 x86
 ~net-wireless/broadcom-sta-5.100.82.38 amd64 x86
 ~net-wireless/iwl5150-ucode-8.24.2.2 amd64 x86
 ~net-wireless/iwl6000-ucode-9.221.4.1 amd64 x86
 ~net-wireless/iwl6050-ucode-41.28.5.1 amd64 x86
+~net-wireless/linux-wlan-ng-firmware-0.2.2 amd64 x86
 ~net-wireless/madwifi-ng-0.9.4.4136.20110203 amd64 x86
 ~net-wireless/madwifi-ng-tools-0.9.4.4136.20110203 amd64 x86
+~net-wireless/madwimax-0.1.1 amd64 x86
 ~net-wireless/rtl8192se-2.6.0019.1207.2010 amd64 x86
 ~net-wireless/rtl8192se-firmware-2.6.0019.1207.2010 amd64 x86
+~net-wireless/rtl8192su-firmware-2.6.0001.0320.2009 amd64 x86
+~sys-kernel/linux-firmware-20110604 amd64 x86
 
 ~app-text/wgetpaste-2.18 amd64 x86
 
